--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,14 @@
     --color-dark: #1f2122;
     --color-light: #fff;
     --color-primary: #ec6090;
+    --color-icons: yellow;
     
     --color-bg-body: var(--color-darkest);
 
     --distance-primary: 50px;
     --padding-primary: var(--distance-primary);
     --margin-primary: var(--distance-primary);
-    --border-radius-primary: calc(var(--distance-primary) / 2)
+    --border-radius-primary: calc(var(--distance-primary) / 2);
 
     --font-family-primary: 'Poppins', sans-serif;
     --font-weight-bold: 900;
@@ -22,4 +23,12 @@
 body{
     background-color: var(--color-bg-body);
     font-family: var(--font-family-primary);
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
 }
